--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Welcome to Jekyll!
 
 # Website settings
-title: Jalpc
-description: Jack's blog,use Jekyll and github pages.
-keywords: Jack,Jalpc,blog,Jekyll,github,gh-pages
-baseurl:  /Jalpc # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
-url: http://jarrekk.github.io/Jalpc  # url should be 'http://<github_username>.github.io/homepage' as before
+title: Mirkuz
+description: Mentoring for mutual growth.
+keywords: Mentoring, Training, Recruiting, job placement
+baseurl:  /Mirkuz # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
+url: http://Mirkuzet.github.io/mirkuz  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
 img_path: /Jalpc/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
@@ -19,7 +19,7 @@ author:  # change following line to your infomation.
   linkedin_id: jarrekk # Leave blank if you don't have now
   facebook_username: jiakunnj  # Leave blank if you don't have now
   twitter_username: jiakun614  # Leave blank if you don't have now
-  email: me@jarrekk.com  # Leave blank if you don't have now
+  email: mirkuz@mirkuz.com  # Leave blank if you don't have now
   cv: http://cv.jarrekk.com  # A online CV can be printed as PDF, leave blank if you don't have now
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
   skill_icon1:
